--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,75 @@
-body {
+* {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
   background-color: #f5f5f5;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 16px;
+          column-gap: 16px;
+  padding: 0 8px 0 8px;
+}
+
+.tabs__item {
+  background-color: #e8e8e8;
+  border: 2px solid #888888;
+  border-bottom: none;
+  border-radius: 4px 4px 0 0;
+  padding: 9px 18px;
+  cursor: pointer;
+}
+
+.tabs__item--active {
+  background-color: #fff;
+}
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 780px;
+  min-height: 400px;
+  background-color: #fff;
+  border: 2px solid #888888;
+  padding: 30px;
+}
+
+.content__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content__image {
+  width: 120px;
+  height: 120px;
 }
 /*# sourceMappingURL=style.css.map */
