--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,43 @@
-body 
+*
   box-sizing: border-box
+
+body 
+  font-family: sans-serif
   background-color: #f5f5f5
 
+ul
+  list-style: none
+  padding: 0
+  margin: 0
+
+.tabs 
+  display: flex
+  align-items: center
+  column-gap: 16px
+  padding: 0 8px 0 8px
+  &__item
+    background-color: #e8e8e8
+    border: 2px solid #888888
+    border-bottom: none
+    border-radius: 4px 4px 0 0 
+    padding: 9px 18px
+    cursor: pointer
+    &--active
+      background-color: #fff
+
+.content
+  display: flex
+  justify-content: space-between
+  flex-wrap: wrap
+  width: 780px
+  min-height: 400px
+  background-color: #fff
+  border: 2px solid #888888
+  padding: 30px
+  &__item
+    display: flex
+    flex-direction: column
+    align-items: center
+  &__image 
+    width: 120px
+    height: 120px
