--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,11 +4,18 @@
 body 
   font-family: sans-serif
   background-color: #f5f5f5
+  margin: 0
 
 ul
   list-style: none
   padding: 0
   margin: 0
+
+.container 
+  max-width: 992px
+  padding: 50px 20px
+  margin: auto
+
 
 .tabs 
   display: flex
@@ -16,6 +23,7 @@ ul
   column-gap: 16px
   padding: 0 8px 0 8px
   &__item
+    font-size: 16px
     background-color: #e8e8e8
     border: 2px solid #888888
     border-bottom: none
@@ -27,9 +35,9 @@ ul
 
 .content
   display: flex
-  justify-content: space-between
+  column-gap: 40px
   flex-wrap: wrap
-  width: 780px
+  width: inherit
   min-height: 400px
   background-color: #fff
   border: 2px solid #888888
@@ -41,3 +49,30 @@ ul
   &__image 
     width: 120px
     height: 120px
+
+@media screen and (max-width: 676px) 
+  .tabs
+    column-gap: 8px
+    &__item
+      padding: 5px 9px
+
+@media screen and (max-width: 480px) 
+  .tabs
+    column-gap: 5px
+    padding: 0 4px 0 4px
+    &__item
+      font-size: 12px
+
+  .content
+    padding: 15px
+
+
+@media screen and (max-width: 375px) 
+  .tabs
+    &__item
+      max-width: 50px
+      overflow: hidden
+      padding: 2px
+    
+  .content
+    flex-direction: column
